<resources>
    <string name="app_name">The Movie List</string>

    <!-- BEGIN: Request status -->
    <string name="text_request_status_try_again">Try again</string>
    <string name="text_request_status_empty_list_title">The list is empty</string>
    <string name="error_request_status_something_went_wrong">Uhh… Unfortunately something went wrong. Please, try again.</string>
    <!-- END: Request status -->

    <!-- BEGIN: Home -->
    <string name="text_home_most_popular">Most popular</string>
    <string name="text_home_most_rated">Most rated</string>
    <string name="text_home_see_all">See all</string>
    <!-- END: Home -->

    <!-- BEGIN: Movie detail -->
    <string name="text_movie_detail_recommendations">Recommendations</string>
    <string name="text_movie_detail_cast">Cast</string>
    <string name="text_movie_detail_overview">Overview</string>
    <string name="text_movie_detail_reviews">Reviews</string>
    <string name="text_movie_detail_trailers">Trailers</string>
    <string name="text_movie_detail_read_more">read more</string>
    <string name="text_movie_detail_read_less">read less</string>
    <string name="text_movie_detail_list_empty">The list is empty</string>
    <string name="format_movie_detail_runtime" formatted="true">%1$sh %2$sm</string>
    <string name="format_movie_detail_see_all_trailers" formatted="true">See all trailers (%1$s)</string>
    <string name="format_movie_detailread_all_reviews" formatted="true">Read all reviews (%1$s)</string>
    <string name="a11y_movie_detail_backdrop">This is the backdrop of the movie</string>
    <string name="a11y_movie_detail_rating_icon">Star icon, related to the movie rating</string>
    <!-- END: Movie detail -->

    <!-- BEGIN: Common resources -->
    <string name="symbol_pipe">|</string>
    <string name="symbol_bullet">\u2022</string>
    <string name="text_home">Home</string>
    <string name="text_browse">Browse</string>
    <string name="text_cinema">Cinema</string>
    <string name="text_library">Library</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_watched">Watched</string>
    <string name="text_movie_added_favorite">The movie was added to your favorite list</string>
    <string name="text_movie_removed_favorite">The movie was removed from your favorite list</string>
    <string name="text_set_favorite">Set as favorite</string>
    <string name="text_remove_favorite">Remove as favorite</string>
    <string name="text_set_watched">Set as watched</string>
    <string name="text_remove_watched">Remove as watched</string>
    <string name="text_movie_added_watched">The movie was added to your watched list</string>
    <string name="text_movie_removed_watched">The movie was removed from your watched list</string>
    <string name="text_trailer_list">Trailer list</string>
    <string name="text_review_list">Review list</string>
    <string name="tag_movie_list">Movie list</string>
    <string name="tag_movie_detail_cast">Movie detail cast list</string>
    <string name="a11y_movie_item_calendar">Calendar image, related to the movie release year</string>
    <string name="a11y_favorite_button">Button used to favorite/unfavorite the movie</string>
    <string name="a11y_movie_item_star">Star image, related to the movie rating</string>
    <string name="a11y_movie_item_poster">Movie poster</string>
    <string name="a11y_movie_trailer_thumbnail">Movie trailer\'s thumbnail</string>
    <string name="a11y_movie_detail_schedule_icon">Watch icon, related to the movie detail runtime</string>
    <string name="error_watched_movie_text">An error occurred while tried to set the movie watched. Please, try again.</string>
    <string name="error_favorite_movie_text">An error occurred while tried to favorite the movie. Please, try again.</string>
    <string name="error_intent_cant_be_handled">The intent can\'t be handled</string>
    <!-- END: Common resources -->
</resources>
