<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_gravity="center"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/loading_request_status" />

    <LinearLayout
        android:id="@+id/view_request_status_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_request_status_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_request_status_something_went_wrong"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_request_status_try_again"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/text_request_status_try_again" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_request_status_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/text_request_status_empty_list_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/text_request_status_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textAlignment="center"
            tools:text="Nenhum estabelecimento encontrado" />
    </LinearLayout>
</FrameLayout>