<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.themovielist.ui.movieDetail.MovieDetailViewModel" />

        <variable
            name="backdropApiImageSizeList"
            type="com.themovielist.model.ApiImageSizeModel[]" />

        <variable
            name="screenWidth"
            type="Float" />

        <import type="com.themovielist.model.response.Status" />

        <import type="com.themovielist.widget.RequestStatusView.RequestStatus" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/movie_backdrop"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/in_theaters_backdrop_height"
                        android:contentDescription="@string/a11y_movie_detail_backdrop"
                        android:scaleType="centerCrop"
                        app:imageSizeList="@{backdropApiImageSizeList}"
                        app:imageUrl="@{viewModel.movie.movieResponseModel.backdropPath}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:viewWidth="@{screenWidth}" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@color/black_alpha_40"
                        app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop"
                        app:layout_constraintEnd_toEndOf="@+id/movie_backdrop"
                        app:layout_constraintStart_toStartOf="@id/movie_backdrop"
                        app:layout_constraintTop_toTopOf="@+id/movie_backdrop" />

                    <TextView
                        android:id="@+id/movie_release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop"
                        app:layout_constraintStart_toStartOf="@+id/movie_backdrop"
                        app:yearFromCalendar="@{viewModel.movie.movieResponseModel.releaseDate}"
                        tools:text="2018" />

                    <TextView
                        android:id="@+id/separator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/symbol_pipe"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="@id/movie_release_year"
                        app:layout_constraintStart_toEndOf="@id/movie_release_year" />

                    <TextView
                        android:id="@+id/movie_genres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        app:genres="@{viewModel.movie.genreList}"
                        app:layout_constraintBottom_toBottomOf="@id/separator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/separator"
                        tools:text="Action, Sci-Fi, Action, Sci-Fi, Action, Sci-Fi" />

                    <TextView
                        android:id="@+id/movie_name"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{viewModel.movie.movieResponseModel.title}"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/movie_release_year"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/movie_release_year"
                        tools:text="Dunkirk" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.themovielist.widget.RequestStatusView
                    android:id="@+id/rsvMovieDetailRequestStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movieDetailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="16dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="16dp" />

                    <TextView
                        android:id="@+id/tvMovieDetailSynopseLabel"
                        style="@style/MovieDetailSectionTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_movie_detail_overview"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvMovieDetailSynopsys"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_0_5x"
                        android:text="@{viewModel.movie.movieResponseModel.overview}"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/tvMovieDetailSynopseLabel"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing." />

                    <View
                        android:id="@+id/divider_movie_detail_one"
                        style="@style/HorizontalLineDivider"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailSynopsys" />

                    <com.themovielist.widget.RequestStatusView
                        android:id="@+id/request_status_movie_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin_2x"
                        android:layout_marginEnd="@dimen/default_margin"
                        app:goneUnless="@{viewModel.movieDetail.status == Status.ERROR}"
                        app:layout_constraintTop_toBottomOf="@+id/divider_movie_detail_one"
                        app:onTryAgain="@{() -> viewModel.tryLoadMovieDetailAgain()}"
                        app:toggleStatus="@{RequestStatus.ERROR}" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        app:goneUnless="@{viewModel.movieDetail.status != Status.ERROR}"
                        app:layout_constraintTop_toBottomOf="@+id/divider_movie_detail_one">

                        <ImageView
                            android:id="@+id/ivMovieDetailRatingIcon"
                            android:layout_width="@dimen/movie_detail_icon_size"
                            android:layout_height="@dimen/movie_detail_icon_size"
                            android:layout_marginTop="@dimen/default_margin"
                            android:contentDescription="@string/a11y_movie_detail_rating_icon"
                            app:layout_constraintEnd_toStartOf="@+id/ivMovieDetailTimeIcon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_star_black"
                            app:tint="@color/half_baked" />

                        <ImageView
                            android:id="@+id/ivMovieDetailTimeIcon"
                            android:layout_width="@dimen/movie_detail_icon_size"
                            android:layout_height="@dimen/movie_detail_icon_size"
                            android:contentDescription="@string/a11y_movie_detail_schedule_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivMovieDetailRatingIcon"
                            app:layout_constraintTop_toTopOf="@+id/ivMovieDetailRatingIcon"
                            app:srcCompat="@drawable/ic_schedule"
                            app:tint="@color/half_baked" />

                        <TextView
                            android:id="@+id/text_movie_detail_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@{viewModel.movie.movieResponseModel.voteAverage}"
                            app:digits="@{1}"
                            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailRatingIcon"
                            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailRatingIcon"
                            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailRatingIcon"
                            tools:text="7.6" />

                        <TextView
                            android:id="@+id/text_movie_detail_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailTimeIcon"
                            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailTimeIcon"
                            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailTimeIcon"
                            app:movieDetailRuntime="@{viewModel.movieDetail.data.runtime}"
                            tools:text="1h 30m" />

                        <com.themovielist.widget.MovieDetailSectionView
                            android:id="@+id/section_view_movie_detail_review"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:buttonTitle="@string/format_movie_detailread_all_reviews"
                            app:content="@layout/item_movie_review"
                            app:emptyMessage="@string/text_movie_detail_list_empty"
                            app:layout_constraintTop_toBottomOf="@+id/text_movie_detail_runtime"
                            app:shimmerContent="@layout/item_movie_review_shimmer"
                            app:title="@string/text_movie_detail_reviews" />

                        <com.themovielist.widget.MovieDetailSectionView
                            android:id="@+id/section_view_movie_detail_trailer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:buttonTitle="@string/format_movie_detail_see_all_trailers"
                            app:emptyMessage="@string/text_movie_detail_list_empty"
                            app:layout_constraintTop_toBottomOf="@+id/section_view_movie_detail_review"
                            app:shimmerContent="@layout/item_movie_trailer_shimmer"
                            app:title="@string/text_movie_detail_trailers" />

                        <View
                            android:id="@+id/divider1"
                            style="@style/HorizontalLineDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/section_view_movie_detail_trailer" />

                        <TextView
                            android:id="@+id/text_home_most_popular"
                            style="@style/MovieDetailSectionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/text_movie_detail_cast"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider1" />

                        <View
                            android:id="@+id/divider2"
                            style="@style/HorizontalLineDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_home_most_popular" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/MovieDetailSectionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/text_movie_detail_recommendations"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>