<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.themovielist.ui.home.HomeViewModel" />

        <import type="com.themovielist.widget.RequestStatusView.RequestStatus" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_appbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.themovielist.widget.RequestStatusView
                    android:id="@+id/request_status_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:onTryAgain="@{() -> viewModel.tryFetchHomeDataAgain()}"
                    app:toggleStatus="@{RequestStatus.ERROR}" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/text_movie_detail_cast"
                        style="@style/HomeListTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_home_most_popular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.themovielist.widget.text.DrawableCompatTextView
                        android:id="@+id/text_home_see_all_popularity"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.showFullListSortedByPopularity()}"
                        android:text="@string/text_home_see_all"
                        app:drawableRightCompat="@drawable/chevron_right"
                        app:layout_constraintBaseline_toBaselineOf="@+id/text_movie_detail_cast"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fragment_home_movie_list_popular"
                        android:name="com.themovielist.ui.home.horizontalList.HomeMovieListFragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_1_5x"
                        android:tag="popular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_movie_detail_cast" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/default_margin_1_5x"
                        android:background="@drawable/horizontal_line_divider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_home_movie_list_popular" />

                    <TextView
                        android:id="@+id/text_home_most_rated"
                        style="@style/HomeListTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_1_5x"
                        android:text="@string/text_home_most_rated"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider" />

                    <com.themovielist.widget.text.DrawableCompatTextView
                        android:id="@+id/text_home_see_all_rating"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.showFullListSortedByRating()}"
                        android:text="@string/text_home_see_all"
                        app:drawableRightCompat="@drawable/chevron_right"
                        app:layout_constraintBaseline_toBaselineOf="@+id/text_home_most_rated"
                        app:layout_constraintBottom_toBottomOf="@+id/text_home_most_rated"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/homeRatedPartialListFragment"
                        android:name="com.themovielist.ui.home.horizontalList.HomeMovieListFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_1_5x"
                        android:tag="rating"
                        app:layout_constraintTop_toBottomOf="@+id/text_home_most_rated" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>